# MIA_TFM

./: Ideas.md  README.md  main.py  sparqlsnippet.ipynb
MCPsnippet/: app.py  pyproject.toml
TFMTeXiS-UTF8/: TFMTeXiS.aux  TFMTeXiS.bbl  TFMTeXiS.blg  TFMTeXiS.fdb_latexmk  TFMTeXiS.fls  TFMTeXiS.ilg  TFMTeXiS.lof  TFMTeXiS.lot  TFMTeXiS.out  TFMTeXiS.tex  TFMTeXiS.toc  biblio.bib
app/: app.py  style.css
app_v1/: index.html  load_csv.py
app_v1.1/: load_csv.py
app_v1.2/: app.py
app_v1.3/: load_csv.py  ollama_manager.py
app_v1.4/: script.js  style.css
app_v1.5/: rag_pipeline.py  script.js
app_v1.7/: CoplasData.csv  rag_pipeline.py
app_v1.9/: sparqltool.py
faiss_index_/: index.pkl
gemini_sqlite/: README.md  add_song_to_db.py  add_songs_to_db.py  corpus_musical.db  corpus_musical.db-journal  create_db.py  db_tools.py  delete.py  main.py  mcp_client.py  mcp_server.py  mcp_tools.py  pyproject.toml
gemini_sqlite/1/: info_columnas.py  mcp_client.py  mcp_server.py
gemini_sqlite/1/static/: index.html
gemini_sqlite/2/: mcp_client.py  mcp_server.py  mcp_server_2.py
gemini_sqlite/ejemplos/: CO-1935-00-LL-03561_updated.mei  dur_ppq_ejemplo.mei  hemiolia_h_ejemplo.xml  hemiolia_v_ejemplo.xml  note_metersig_ejemplo.mei  plicas_anomalas_ejemplo.musicxml
gemini_sqlite/ejemplos/568/: score_style.mss
ollama_mcp/: README.md  app.py  (+7 more)
ollama_mcp_local_dataset/: README.md  app.py  config.py  dataset_parser.py  mcp_client.py  mcp_server.py  ollama_client.py  pyproject.toml  rag_engine.py  requirements.txt  web_app.py
ollama_mcp_local_dataset/static/: index.html
(+569 files in other folders)
