[project]
name = "gemini-sqlite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.4.1",
    "fastapi>=0.136.3",
    "mcp>=1.27.2",
    "music21>=10.3.0",
    "ollama>=0.6.2",
    "sentence-transformers>=5.5.1",
    "spacy>=3.8.14",
]
